--- a/manpower-backend/src/main/resources/application.properties
+++ b/manpower-backend/src/main/resources/application.properties
@@ -1,29 +1,29 @@
 # === DATABASE CONFIGURATION ===
-spring.datasource.url=jdbc:mysql://localhost:3306/manpower_db
-spring.datasource.username=root
-spring.datasource.password=1220ahmed
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=
 
 # === JPA / Hibernate Configuration ===
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=
 
 # === PesaPal API Configuration ===
 # IMPORTANT: Replace YOUR_PESAPAL_CONSUMER_KEY, YOUR_PESAPAL_CONSUMER_SECRET with your actual credentials from PesaPal.
 # For pesapal.api.base-url, use the sandbox URL for testing (e.g., https://cybqa.pesapal.com/v3/api)
 # For pesapal.callback.url, use your backend's public IP or a tool like ngrok for local testing
-pesapal.api.base-url=https://cybqa.pesapal.com/v3/api
-pesapal.consumer.key=qkio1BGGYAXTu2JOfm7XSXNruoZsrqEW
-pesapal.consumer.secret=osGQ364R49cXKeOYSpaOnT++rHs=
-pesapal.callback.url=http://YOUR_BACKEND_IP:8080/api/payments/callback
+pesapal.api.base-url=
+pesapal.consumer.key=
+pesapal.consumer.secret=
+pesapal.callback.url=
 
 # === Email Configuration (for sending password reset emails) ===
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=xabiiib0790@gmail.com
-spring.mail.password=slme ggtb fkpd vucu
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=
+spring.mail.properties.mail.smtp.starttls.enable=
+spring.mail.properties.mail.smtp.starttls.required=
+spring.mail.properties.mail.smtp.ssl.trust=
